Enhance packaging and build processes for SafeChain Agent
- Added a new `generate-icons` target in the Makefile to automate icon generation from SVG files.
- Updated macOS and Windows CI workflows to verify the existence of icon files and include them in the build process.
- Introduced new scripts for generating icons and background images for macOS installers.
- Improved the macOS distribution package to include a background image and updated the Distribution.xml configuration.
- Added Windows resource compilation to include the application icon in the installer.
- Created new icon and background image files for use in the installer.

--- a/.github/workflows/build-macos-pkg.yml
+++ b/.github/workflows/build-macos-pkg.yml
@@ -73,6 +73,12 @@ jobs:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: .github/scripts/macos/core/sign-binary.sh bin/safechain-proxy-darwin-${{ matrix.arch }}
 
+      - name: Verify icon files exist
+        run: |
+          ls -la packaging/shared/
+          test -f packaging/shared/background.png || (echo "background.png missing" && exit 1)
+          test -f packaging/shared/SafeChain.icns || (echo "SafeChain.icns missing" && exit 1)
+
       - name: Build distribution .pkg installer
         run: |
           cd packaging/macos
