--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,8 +67,8 @@ jobs:
           mv artifacts/SafeChainAgent.amd64.msi/SafeChainAgent.amd64.msi ./SafeChainAgent-windows-amd64.msi
           mv artifacts/SafeChainAgent.arm64.msi/SafeChainAgent.arm64.msi ./SafeChainAgent-windows-arm64.msi
           
-          mv "artifacts/SafeChainAgent-amd64.pkg/SafeChainAgent-$VERSION-amd64.pkg" ./SafeChainAgent-macos-amd64.pkg
-          mv "artifacts/SafeChainAgent-arm64.pkg/SafeChainAgent-$VERSION-arm64.pkg" ./SafeChainAgent-macos-arm64.pkg
+          mv "artifacts/SafeChainAgent-amd64.pkg/SafeChainAgent-amd64.pkg" ./SafeChainAgent-macos-amd64.pkg
+          mv "artifacts/SafeChainAgent-arm64.pkg/SafeChainAgent-arm64.pkg" ./SafeChainAgent-macos-arm64.pkg
                     
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
