--- a/.github/workflows/build-macos-pkg.yml
+++ b/.github/workflows/build-macos-pkg.yml
@@ -77,6 +77,9 @@ jobs:
         run: |
           cd packaging/macos
           ./build-distribution-pkg.sh -v "${{ inputs.version || 'dev' }}" -a "${{ matrix.arch }}" -b "../../bin" -o "../../dist"
+
+      - name: Rename package
+        run: |
           mv dist/SafeChainAgent-${{ inputs.version || 'dev' }}-${{ matrix.arch }}.pkg dist/SafeChainAgent-${{ matrix.arch }}.pkg
 
       - name: Create and notarize macOS packages
