--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,9 @@ jobs:
           mv artifacts/safechain-agent-darwin-amd64/safechain-agent-darwin-amd64 .
           mv artifacts/safechain-agent-darwin-arm64/safechain-agent-darwin-arm64 .
           
+          mv artifacts/safechain-agent-ui-darwin-amd64/safechain-agent-ui-darwin-amd64 .
+          mv artifacts/safechain-agent-ui-darwin-arm64/safechain-agent-ui-darwin-arm64 .
+          
           mv artifacts/safechain-proxy-darwin-amd64/safechain-proxy-darwin-amd64 .
           mv artifacts/safechain-proxy-darwin-arm64/safechain-proxy-darwin-arm64 .
 
@@ -65,6 +68,8 @@ jobs:
           files: |
             safechain-agent-darwin-amd64
             safechain-agent-darwin-arm64
+            safechain-agent-ui-darwin-amd64
+            safechain-agent-ui-darwin-arm64
             safechain-proxy-darwin-amd64
             safechain-proxy-darwin-arm64
             safechain-proxy-linux-amd64
