--- a/.github/workflows/build-macos-pkg.yml
+++ b/.github/workflows/build-macos-pkg.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Download agent artifact
         uses: actions/download-artifact@v4
         with:
-          name: safechain-agent-darwin-${{ matrix.arch }}
+          name: safechain-ultimate-darwin-${{ matrix.arch }}
           path: bin
 
       - name: Download proxy artifact
@@ -47,7 +47,7 @@ jobs:
       - name: Verify binaries exist
         run: |
           ls -lh bin/
-          ls -lh bin/safechain-agent-darwin-${{ matrix.arch }}
+          ls -lh bin/safechain-ultimate-darwin-${{ matrix.arch }}
           ls -lh bin/safechain-proxy-darwin-${{ matrix.arch }}
 
       - name: Make scripts executable
@@ -65,7 +65,7 @@ jobs:
         env:
           DEV_ID_SHA: ${{ env.DEV_ID_SHA }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-        run: .github/scripts/macos/core/sign-binary.sh bin/safechain-agent-darwin-${{ matrix.arch }}
+        run: .github/scripts/macos/core/sign-binary.sh bin/safechain-ultimate-darwin-${{ matrix.arch }}
 
       - name: Sign macOS proxy binary
         env:
@@ -80,7 +80,7 @@ jobs:
 
       - name: Rename package
         run: |
-          mv dist/SafeChainAgent-${{ inputs.version || 'dev' }}-${{ matrix.arch }}.pkg dist/SafeChainAgent-${{ matrix.arch }}.pkg
+          mv dist/SafeChainUltimate-${{ inputs.version || 'dev' }}-${{ matrix.arch }}.pkg dist/SafeChainUltimate-${{ matrix.arch }}.pkg
 
       - name: Create and notarize macOS packages
         env:
@@ -92,16 +92,16 @@ jobs:
           KEYCHAIN_PATH: ${{ env.KEYCHAIN_PATH }}
           VERSION: ${{ inputs.version }}
           BUILD_NUMBER: ${{ github.run_number }}
-        run: .github/scripts/macos/packages/sign-and-notarize-package.sh dist/SafeChainAgent-${{ matrix.arch }}.pkg
+        run: .github/scripts/macos/packages/sign-and-notarize-package.sh dist/SafeChainUltimate-${{ matrix.arch }}.pkg
 
       - name: Upload .pkg artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SafeChainAgent-${{ matrix.arch }}.pkg
-          path: dist/SafeChainAgent-${{ matrix.arch }}.pkg
+          name: SafeChainUltimate-${{ matrix.arch }}.pkg
+          path: dist/SafeChainUltimate-${{ matrix.arch }}.pkg
 
       - name: Upload .pkg checksum
         uses: actions/upload-artifact@v4
         with:
-          name: SafeChainAgent-${{ matrix.arch }}.pkg.sha256
-          path: dist/SafeChainAgent-${{ matrix.arch }}.pkg.sha256
+          name: SafeChainUltimate-${{ matrix.arch }}.pkg.sha256
+          path: dist/SafeChainUltimate-${{ matrix.arch }}.pkg.sha256
