--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -41,14 +41,14 @@ jobs:
 
       - name: Prepare artifacts
         run: |
-          mv bin/safechain-agent-darwin-${{ matrix.arch }} safechain-agent-darwin-${{ matrix.arch }}
+          mv bin/safechain-ultimate-darwin-${{ matrix.arch }} safechain-ultimate-darwin-${{ matrix.arch }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: safechain-agent-darwin-${{ matrix.arch }}
+          name: safechain-ultimate-darwin-${{ matrix.arch }}
           path: |
-            safechain-agent-darwin-${{ matrix.arch }}
+            safechain-ultimate-darwin-${{ matrix.arch }}
 
   build-unix-proxy:
     strategy:
