--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -41,14 +41,14 @@ jobs:
 
       - name: Rename binary for artifact
         run: |
-          mv bin/safechain-agent-windows-${{ matrix.arch }}.exe bin/SafeChainAgent.${{ matrix.arch }}.exe
+          mv bin/safechain-ultimate-windows-${{ matrix.arch }}.exe bin/SafeChainUltimate.${{ matrix.arch }}.exe
         shell: bash
 
       - name: Upload Windows agent artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SafeChainAgent.${{ matrix.arch }}.exe
-          path: bin/SafeChainAgent.${{ matrix.arch }}.exe
+          name: SafeChainUltimate.${{ matrix.arch }}.exe
+          path: bin/SafeChainUltimate.${{ matrix.arch }}.exe
 
   build-windows-proxy:
     strategy:
@@ -123,10 +123,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download SafeChainAgent artifact
+      - name: Download SafeChainUltimate artifact
         uses: actions/download-artifact@v4
         with:
-          name: SafeChainAgent.${{ matrix.arch }}.exe
+          name: SafeChainUltimate.${{ matrix.arch }}.exe
           path: bin
 
       - name: Download SafeChainProxy artifact
@@ -137,14 +137,14 @@ jobs:
 
       - name: Rename binaries for packaging
         run: |
-          mv bin/SafeChainAgent.${{ matrix.arch }}.exe bin/SafeChainAgent.exe
+          mv bin/SafeChainUltimate.${{ matrix.arch }}.exe bin/SafeChainUltimate.exe
           mv bin/SafeChainProxy.${{ matrix.arch }}.exe bin/SafeChainProxy.exe
         shell: bash
 
       - name: Sign binaries
         run: |
           dotnet tool install --global AzureSignTool --version 6.0.1
-          AzureSignTool sign -kvu "${{ secrets.AZURE_KEY_VAULT_URI }}" -kvi "${{ secrets.AZURE_CLIENT_ID }}" -kvt "${{ secrets.AZURE_TENANT_ID }}" -kvs "${{ secrets.AZURE_CLIENT_SECRET }}" -kvc ${{ secrets.AZURE_CERT_NAME }} -tr http://timestamp.globalsign.com/tsa/advanced -v "bin/SafeChainAgent.exe"
+          AzureSignTool sign -kvu "${{ secrets.AZURE_KEY_VAULT_URI }}" -kvi "${{ secrets.AZURE_CLIENT_ID }}" -kvt "${{ secrets.AZURE_TENANT_ID }}" -kvs "${{ secrets.AZURE_CLIENT_SECRET }}" -kvc ${{ secrets.AZURE_CERT_NAME }} -tr http://timestamp.globalsign.com/tsa/advanced -v "bin/SafeChainUltimate.exe"
           AzureSignTool sign -kvu "${{ secrets.AZURE_KEY_VAULT_URI }}" -kvi "${{ secrets.AZURE_CLIENT_ID }}" -kvt "${{ secrets.AZURE_TENANT_ID }}" -kvs "${{ secrets.AZURE_CLIENT_SECRET }}" -kvc ${{ secrets.AZURE_CERT_NAME }} -tr http://timestamp.globalsign.com/tsa/advanced -v "bin/SafeChainProxy.exe"
         shell: bash
 
@@ -157,11 +157,11 @@ jobs:
       - name: Build MSI installer
         run: |
           .\packaging\windows\build-msi.ps1 -Version "${{ inputs.version || 'dev' }}" -Arch "${{ matrix.arch }}" -BinDir ".\bin" -OutputDir "."
-          AzureSignTool sign -kvu "${{ secrets.AZURE_KEY_VAULT_URI }}" -kvi "${{ secrets.AZURE_CLIENT_ID }}" -kvt "${{ secrets.AZURE_TENANT_ID }}" -kvs "${{ secrets.AZURE_CLIENT_SECRET }}" -kvc ${{ secrets.AZURE_CERT_NAME }} -tr http://timestamp.globalsign.com/tsa/advanced -v "SafeChainAgent.${{ matrix.arch }}.msi"
+          AzureSignTool sign -kvu "${{ secrets.AZURE_KEY_VAULT_URI }}" -kvi "${{ secrets.AZURE_CLIENT_ID }}" -kvt "${{ secrets.AZURE_TENANT_ID }}" -kvs "${{ secrets.AZURE_CLIENT_SECRET }}" -kvc ${{ secrets.AZURE_CERT_NAME }} -tr http://timestamp.globalsign.com/tsa/advanced -v "SafeChainUltimate.${{ matrix.arch }}.msi"
         shell: pwsh
 
       - name: Upload MSI artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SafeChainAgent.${{ matrix.arch }}.msi
-          path: SafeChainAgent.${{ matrix.arch }}.msi
+          name: SafeChainUltimate.${{ matrix.arch }}.msi
+          path: SafeChainUltimate.${{ matrix.arch }}.msi
