--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,8 +49,8 @@ jobs:
       - name: Prepare release files
         id: checksums
         run: |
-          mv artifacts/safechain-agent-darwin-amd64/safechain-agent-darwin-amd64 .
-          mv artifacts/safechain-agent-darwin-arm64/safechain-agent-darwin-arm64 .
+          mv artifacts/safechain-ultimate-darwin-amd64/safechain-ultimate-darwin-amd64 .
+          mv artifacts/safechain-ultimate-darwin-arm64/safechain-ultimate-darwin-arm64 .
 
           mv artifacts/safechain-proxy-darwin-amd64/safechain-proxy-darwin-amd64 .
           mv artifacts/safechain-proxy-darwin-arm64/safechain-proxy-darwin-arm64 .
@@ -58,26 +58,26 @@ jobs:
           mv artifacts/safechain-proxy-linux-amd64/safechain-proxy-linux-amd64 .
           mv artifacts/safechain-proxy-linux-arm64/safechain-proxy-linux-arm64 .
 
-          mv artifacts/SafeChainAgent.amd64.msi/SafeChainAgent.amd64.msi ./SafeChainAgent-windows-amd64.msi
-          mv artifacts/SafeChainAgent.arm64.msi/SafeChainAgent.arm64.msi ./SafeChainAgent-windows-arm64.msi
+          mv artifacts/SafeChainUltimate.amd64.msi/SafeChainUltimate.amd64.msi ./SafeChainUltimate-windows-amd64.msi
+          mv artifacts/SafeChainUltimate.arm64.msi/SafeChainUltimate.arm64.msi ./SafeChainUltimate-windows-arm64.msi
 
-          mv artifacts/SafeChainAgent-amd64.pkg/SafeChainAgent-amd64.pkg ./SafeChainAgent-darwin-amd64.pkg
-          mv artifacts/SafeChainAgent-arm64.pkg/SafeChainAgent-arm64.pkg ./SafeChainAgent-darwin-arm64.pkg
+          mv artifacts/SafeChainUltimate-amd64.pkg/SafeChainUltimate-amd64.pkg ./SafeChainUltimate-darwin-amd64.pkg
+          mv artifacts/SafeChainUltimate-arm64.pkg/SafeChainUltimate-arm64.pkg ./SafeChainUltimate-darwin-arm64.pkg
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            safechain-agent-darwin-amd64
-            safechain-agent-darwin-arm64
+            safechain-ultimate-darwin-amd64
+            safechain-ultimate-darwin-arm64
             safechain-proxy-darwin-amd64
             safechain-proxy-darwin-arm64
             safechain-proxy-linux-amd64
             safechain-proxy-linux-arm64
-            SafeChainAgent-windows-amd64.msi
-            SafeChainAgent-windows-arm64.msi
-            SafeChainAgent-darwin-amd64.pkg
-            SafeChainAgent-darwin-arm64.pkg
+            SafeChainUltimate-windows-amd64.msi
+            SafeChainUltimate-windows-arm64.msi
+            SafeChainUltimate-darwin-amd64.pkg
+            SafeChainUltimate-darwin-arm64.pkg
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
