--- a/.github/workflows/build-macos-pkg.yml
+++ b/.github/workflows/build-macos-pkg.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download agent artifact
+      - name: Download ultimate artifact
         uses: actions/download-artifact@v4
         with:
           name: safechain-ultimate-darwin-${{ matrix.arch }}
@@ -61,7 +61,7 @@ jobs:
           MACOS_INSTALLER_CERTIFICATE_P12: ${{ secrets.MACOS_INSTALLER_CERTIFICATE_P12 }}
         run: .github/scripts/macos/core/import-certificate.sh
 
-      - name: Sign macOS agent binary
+      - name: Sign macOS ultimate binary
         env:
           DEV_ID_SHA: ${{ env.DEV_ID_SHA }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
