--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -26,7 +26,7 @@ serde_test = "1"
 radix_trie = "0.3"
 serde_json = "1"
 sonic-rs = "0.5"
-memchr = "2.7"
+aho-corasick = "1.1"
 rand = "0.9"
 parking_lot = "0.12.5"
 serde_html_form = "0.4"
