--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "safechain-proxy"
-description = "MITM SafeChain HTTP(S)/SOCKS5 Proxy for Developer Security"
-version = "0.1.0"
+name = "safechain-proxy-lib"
+description = "Core library for safechain-proxy (cli)"
+version = { workspace = true }
 edition = "2024"
 publish = false
 rust-version = "1.91"
@@ -12,39 +12,35 @@ resolver = "3"
 har = []
 
 [dependencies]
-arc-swap = "1.7"
+arc-swap = { workspace = true }
 clap = { version = "4.5", features = ["derive"] }
-keyring-core = "0.7"
-humantime = "2.3"
-secrecy = "0.10"
-semver = { version = "1.0", features = ["serde"] }
-tokio = { version = "1.48", features = ["full"] }
-serde = "1.0"
-postcard = { version = "1.1", features = ["alloc"] }
-lz4_flex = "0.12"
-serde_test = "1"
-radix_trie = "0.3"
-serde_json = "1"
-rand = "0.9"
-parking_lot = "0.12"
-serde_html_form = "0.4"
+keyring-core = { workspace = true }
+humantime = { workspace = true }
+secrecy = { workspace = true }
+semver = { workspace = true, features = ["serde"] }
+tokio = { workspace = true, features = ["full"] }
+serde = { workspace = true }
+postcard = { workspace = true, features = ["alloc"] }
+lz4_flex = { workspace = true }
+serde_test = { workspace = true }
+radix_trie = { workspace = true }
+serde_json = { workspace = true }
+rand = { workspace = true }
+parking_lot = { workspace = true }
+serde_html_form = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-linux-keyutils-keyring-store = "0.2"
+linux-keyutils-keyring-store = { workspace = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-apple-native-keyring-store = { version = "0.2", features = ["keychain"] }
-sudo = "0.6"
-
-[target.'cfg(target_family = "unix")'.dependencies]
-jemallocator = { package = "tikv-jemallocator", version = "0.6" }
+apple-native-keyring-store = { workspace = true, features = ["keychain"] }
+sudo = { workspace = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-windows-native-keyring-store = "0.5"
-mimalloc = { version = "0.1", default-features = false }
+windows-native-keyring-store = { workspace = true }
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
-static_vcruntime = "3.0"
+static_vcruntime = { workspace = true }
 
 [dependencies.rama]
 workspace = true
