--- a/proxy_netbench/Cargo.toml
+++ b/proxy_netbench/Cargo.toml
@@ -1,24 +1,24 @@
 [package]
 name = "netbench"
 description = "Network Benchmark tool in function of safechain-proxy"
-version = "0.1.0"
-edition = "2024"
+version = { workspace = true }
+edition = { workspace = true }
+rust-version = { workspace = true }
 publish = false
-rust-version = "1.91"
 readme = "../docs/netbench.md"
 resolver = "3"
 
 [dependencies]
-clap = { version = "4.5", features = ["derive"] }
-tokio = { version = "1.48", features = ["full"] }
-serde = "1.0"
-rand = "0.9"
+clap = { workspace = true, features = ["derive"] }
+tokio = { workspace = true, features = ["full"] }
+serde = { workspace = true }
+rand = { workspace = true }
 
 [target.'cfg(target_family = "unix")'.dependencies]
-jemallocator = { package = "tikv-jemallocator", version = "0.6" }
+jemallocator = { workspace = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-mimalloc = { version = "0.1", default-features = false }
+mimalloc = { workspace = true }
 
 [dependencies.rama]
 workspace = true
