migrate from main

--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -2,9 +2,9 @@
 name = "safechain-proxy-lib"
 description = "Core library for safechain-proxy (cli)"
 version = { workspace = true }
-edition = "2024"
+edition = { workspace = true }
+rust-version = { workspace = true }
 publish = false
-rust-version = "1.93"
 readme = "../docs/proxy.md"
 resolver = "3"
 
