--- a/proxy_netbench/Cargo.toml
+++ b/proxy_netbench/Cargo.toml
@@ -13,6 +13,7 @@ clap = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["full"] }
 serde = { workspace = true }
 rand = { workspace = true }
+safechain-proxy-lib = { workspace = true, features = ["har"] }
 
 [target.'cfg(target_family = "unix")'.dependencies]
 jemallocator = { workspace = true }
