use higher fd limit for proxy process
unix-only problem
, on windows this is not a thing

if this default is too high on some environments
(don't think so, but still), we can make it
a bit smaller, but I would try to start high enough

That said where you do not need to run as a system-
wide proxy I would still recommend that. Because
once we need to go system-wide you might be better
of that we start to go down the network interface
hijack level and terminate L4 ourselves

--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -40,6 +40,7 @@ sudo = "0.6"
 
 [target.'cfg(target_family = "unix")'.dependencies]
 jemallocator = { package = "tikv-jemallocator", version = "0.6" }
+libc = "0.2"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-native-keyring-store = "0.5"
