disable aws cmake usage for musl
this should prevent the injection from
the variables incompatible with zig,
if not this we can try to specifically narrow down
stuff like jitentropy instead

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -83,3 +83,5 @@ jobs:
       - name: musl build check
         run: |
           cargo zigbuild -p safechain-proxy --target ${{ matrix.target }} --all-features
+        env:
+          AWS_LC_SYS_CMAKE_BUILDER: "0"
