--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -113,6 +113,8 @@ jobs:
       - name: Build proxy binary for linux musl
         if: ${{ contains(matrix.target, 'unknown-linux-musl') }}
         run: cargo zigbuild --release -p safechain-proxy --target "${{ matrix.target }}"
+        env:
+          AWS_LC_SYS_CMAKE_BUILDER: "0"
 
       - name: Build proxy binary for ${{ matrix.os }}/${{ matrix.arch }}
         if: ${{ !(contains(matrix.target, 'unknown-linux-musl')) }}
