--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -62,6 +62,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - rust_cache_prefix: ""
           - arch: arm64
             target: aarch64-apple-darwin
             runner: macos-14
