--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -28,6 +28,8 @@ serde_json = "1"
 rand = "0.9"
 parking_lot = "0.12.5"
 serde_html_form = "0.4"
+rustls-platform-verifier = "0.5"
+pem = "3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-keyutils-keyring-store = "0.2"
@@ -49,7 +51,7 @@ static_vcruntime = "3.0"
 
 [dependencies.rama]
 workspace = true
-features = ["http-full", "proxy-full", "dns", "boring"]
+features = ["http-full", "proxy-full", "dns", "boring", "rustls"]
 
 [dev-dependencies]
 tracing-test = "0.2"
