--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -57,8 +57,10 @@ jobs:
       - uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561
         with:
           toolchain: nightly
-      - uses: dtolnay/install@cargo-fuzz
-      - run: cargo fuzz check
+      - uses: taiki-e/install-action@90558ad1e179036f31467972b00dec6cb80701fa
+        with:
+          tool: cargo-fuzz
+      - run: cargo fuzz check --fuzz-dir ./proxy-fuzz
 
   proxy-build-check-musl:
     strategy:
