--- a/packaging/macos/com.aikidosecurity.safechainultimate.plist
+++ b/packaging/macos/com.aikidosecurity.safechainultimate.plist
@@ -16,7 +16,7 @@
         </array>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/Library/Application Support/AikidoSecurity/SafeChainUltimate/bin/safechain-ultimate</string>
+		<string>/Library/Application Support/AikidoSecurity/SafeChainUltimate/AikidoSecurity.app/Contents/MacOS/bin/safechain-ultimate</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
@@ -25,6 +25,6 @@
 	<key>StandardOutPath</key>
 	<string>/Library/Logs/AikidoSecurity/SafeChainUltimate/safechain-ultimate.log</string>
 	<key>WorkingDirectory</key>
-	<string>/Library/Application Support/AikidoSecurity/SafeChainUltimate</string>
+	<string>/Library/Application Support/AikidoSecurity/SafeChainUltimate/AikidoSecurity.app/Contents/MacOS</string>
 </dict>
 </plist>
