fix none=>direct for proxy-benchmark.yml
(renamed it in some previous commit)

--- a/.github/workflows/proxy-benchmark.yml
+++ b/.github/workflows/proxy-benchmark.yml
@@ -28,7 +28,7 @@ jobs:
       fail-fast: false
       matrix:
         scenario: [baseline, latency-jitter, flaky-upstream]
-        proxy: [none, global, scoped]
+        proxy: [direct, global, scoped]
 
     steps:
       - name: Checkout
