env util addons improvements and related
- have a common network identifier (user-agent / server name)
  used for non-proxy servers / clients to correctly
  identify the safe-chain proxy with its peers
- refactor the notifier util for getting the concurrent count
  to env so that it in future PRs can be reused
- add relevant layers to the notifier https client as it was
  still for no good reason a pretty barebone client
  so far

--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "safechain-proxy"
 description = "MITM SafeChain HTTP(S)/SOCKS5 Proxy for Developer Security"
-version = "0.1.0"
+version = "1.0.0"  # keep in sync with GH releases
 edition = "2024"
 publish = false
 rust-version = "1.93"
