--- a/packaging/macos/com.aikidosecurity.safechainultimate.plist
+++ b/packaging/macos/com.aikidosecurity.safechainultimate.plist
@@ -3,6 +3,7 @@
 <plist version="1.0">
 <dict>
         <key>KeepAlive</key>
+        <true/>
         <key>ThrottleInterval</key>
         <integer>300</integer>
         <key>Label</key>
