--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -166,8 +166,10 @@ jobs:
       - name: Install WiX Toolset
         run: dotnet tool install -g wix
 
-      - name: Add WiX UI extension
-        run: wix extension add WixToolset.UI.wixext
+      - name: Add WiX extensions
+        run: |
+          wix extension add WixToolset.UI.wixext
+          wix extension add WixToolset.Util.wixext
 
       - name: Build MSI installer
         run: |
