--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -59,20 +59,44 @@ jobs:
           ls -lh bin/safechain-ultimate-ui-linux-${{ matrix.arch }}
           ls -lh bin/safechain-proxy-linux-${{ matrix.arch }}
 
-      - name: Install RPM tools
-        run: sudo apt-get update && sudo apt-get install -y rpm
+      - name: Install packaging tools
+        run: sudo apt-get update && sudo apt-get install -y rpm alien
 
       - name: Build RPM
         run: |
           cd packaging/rpm
           ./build-rpm.sh -v "${{ inputs.version || 'dev' }}" -a "${{ matrix.arch }}" -b "../../bin" -o "../../dist"
 
-      - name: Rename package
+      - name: Convert RPM to DEB using alien
+        run: |
+          cd dist
+          sudo alien --to-deb --keep-version SafeChainUltimate-${{ inputs.version || 'dev' }}-${{ matrix.arch }}.rpm
+
+      - name: Convert RPM to APK
+        run: |
+          cd packaging/rpm
+          ./build-apk.sh -v "${{ inputs.version || 'dev' }}" -a "${{ matrix.arch }}" -r "../../dist/SafeChainUltimate-${{ inputs.version || 'dev' }}-${{ matrix.arch }}.rpm" -o "../../dist"
+
+      - name: Rename packages
         run: |
           mv dist/SafeChainUltimate-${{ inputs.version || 'dev' }}-${{ matrix.arch }}.rpm dist/SafeChainUltimate-${{ matrix.arch }}.rpm
+          mv dist/safechain-ultimate_*.deb dist/SafeChainUltimate-${{ matrix.arch }}.deb
+          mv dist/SafeChainUltimate-${{ inputs.version || 'dev' }}-${{ matrix.arch }}.apk dist/SafeChainUltimate-${{ matrix.arch }}.apk
 
       - name: Upload RPM artifact
         uses: actions/upload-artifact@v4
         with:
           name: SafeChainUltimate-${{ matrix.arch }}.rpm
           path: dist/SafeChainUltimate-${{ matrix.arch }}.rpm
+
+      - name: Upload DEB artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: SafeChainUltimate-${{ matrix.arch }}.deb
+          path: dist/SafeChainUltimate-${{ matrix.arch }}.deb
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: SafeChainUltimate-${{ matrix.arch }}.apk
+          path: dist/SafeChainUltimate-${{ matrix.arch }}.apk
