--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -41,6 +41,12 @@ jobs:
         with:
           go-version: "1.25"
 
+      - name: Install Linux GUI dependencies
+        if: matrix.os == 'linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libwayland-dev libx11-dev libx11-xcb-dev libxkbcommon-x11-dev libgles2-mesa-dev libegl1-mesa-dev libffi-dev libxcursor-dev libvulkan-dev
+
       - name: Run tests
         run: make test
 
