Enhance Linux package management in Makefile and RPM scripts
- Added new targets in the Makefile for installing and uninstalling RPM, DEB, and APK packages, improving the build process for Linux environments.
- Updated RPM spec file and uninstall scripts to handle service management more robustly, ensuring proper installation and uninstallation procedures.
- Modified Dockerfile to include procps-ng for enhanced process management capabilities.

--- a/.devcontainer/centos/Dockerfile
+++ b/.devcontainer/centos/Dockerfile
@@ -9,7 +9,7 @@ ENV GOPATH="/root/go"
 RUN dnf install -y epel-release && \
     dnf config-manager --set-enabled crb && \
     dnf install -y \
-    gcc gcc-c++ git make cmake curl sudo pkgconf clang-devel \
+    gcc gcc-c++ git make cmake curl sudo pkgconf clang-devel procps-ng \
     rpm-build \
     dpkg \
     ruby ruby-devel \
