Update Dockerfiles to include Node.js and Python package managers
- Added Node.js, npm, and Python3 pip to the installation lists in Dockerfiles for Alpine, CentOS, Debian, and Ubuntu, enhancing the development environment with additional package management capabilities.
- This update ensures that necessary tools for JavaScript and Python development are readily available in the containerized environments.

--- a/.devcontainer/alpine/Dockerfile
+++ b/.devcontainer/alpine/Dockerfile
@@ -10,6 +10,7 @@ RUN apk add --no-cache \
     build-base git make curl sudo pkgconf \
     rpm \
     ruby ruby-dev \
+    nodejs npm py3-pip \
     wayland-dev libx11-dev libxkbcommon-dev mesa-dev libxcursor-dev vulkan-loader-dev libffi-dev \
     perl dpkg dpkg-dev xz wget
 
