--- a/.devcontainer/ubuntu/Dockerfile
+++ b/.devcontainer/ubuntu/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     build-essential git make curl sudo pkg-config \
     rpm alien \
     ruby ruby-dev \
+    nodejs npm python3-pip \
     libwayland-dev libx11-dev libx11-xcb-dev libxkbcommon-x11-dev \
     libgles2-mesa-dev libegl1-mesa-dev libffi-dev libxcursor-dev libvulkan-dev \
     && gem install fpm --no-document \
