--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ resolver = "3"
 [workspace.dependencies.rama]
 git = "https://github.com/plabayo/rama"
 rev = "0405ccbddd427c2cbda4af259b620cb0e1ee2d92"
+
+[profile.release]
+opt-level = 3
+strip = true
+lto = true
+codegen-units = 1
