--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ git = "https://github.com/plabayo/rama"
 rev = "0405ccbddd427c2cbda4af259b620cb0e1ee2d92"
 
 [profile.release]
-opt-level = 3
 strip = true
 lto = true
 codegen-units = 1
+
+[profile.release.package.safechain-proxy-fuzz]
+strip = false
+codegen-units = 16
