--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -109,8 +109,8 @@ jobs:
           key: cargo-fuzz-bin-${{ env.CARGO_FUZZ_VERSION }}
       - run: echo "${{ runner.tool_cache }}/cargo-fuzz/bin" >> $GITHUB_PATH
       - run: cargo install --root "${{ runner.tool_cache }}/cargo-fuzz" --version ${{ env.CARGO_FUZZ_VERSION }} cargo-fuzz --locked
-      - run: cargo fuzz build --fuzz-dir ./proxy-fuzz ${{ matrix.fuzz_target }}
-      - run: cargo fuzz run --fuzz-dir ./proxy-fuzz ${{ matrix.fuzz_target }} -- -max_total_time=${{ env.FUZZ_TIME }}
+      - run: CARGO_PROFILE_RELEASE_LTO=false cargo fuzz build --fuzz-dir ./proxy-fuzz ${{ matrix.fuzz_target }}
+      - run: CARGO_PROFILE_RELEASE_LTO=false cargo fuzz run --fuzz-dir ./proxy-fuzz ${{ matrix.fuzz_target }} -- -max_total_time=${{ env.FUZZ_TIME }}
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
