improve release binaries for rust components (#101)
* reduce release binaries by >30% for rust components

Forgot to overwrite some of the release profile
defaults when setting up this project initially.
The defaults are not bad, but some of them can be tweaked
a bit further to get faster and slimmer builds
on the cost of the build time increasing
(release only)

* ensure cargo-fuzz remains functional despite release opts
* override LTO for fuzzing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,12 @@ resolver = "3"
 [workspace.dependencies.rama]
 git = "https://github.com/plabayo/rama"
 rev = "0405ccbddd427c2cbda4af259b620cb0e1ee2d92"
+
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+
+[profile.release.package.safechain-proxy-fuzz]
+strip = false
+codegen-units = 16
